# messaging-app

./: README.md  messaging-app.code-workspace
services/message-service/: Cargo.toml  docker-compose.yaml  docker.env.example
services/message-service/migrations/2024-05-21-165012_create_messages/: down.sql  up.sql
services/message-service/migrations/2024-05-21-172434_create_messages/: down.sql  up.sql
services/message-service/migrations/2024-05-22-113835_create_conversations_and_use_uuid/: down.sql  up.sql
services/message-service/src/: lib.rs  main.rs
services/message-service/src/config/: mod.rs
services/message-service/src/db/: conversation_actions.rs  mod.rs  pagination.rs  schema.rs
services/message-service/src/handlers/: conversations.rs  messages.rs  mod.rs
services/message-service/src/models/: conversation.rs  mod.rs
services/message-service/src/routes/: conversations.rs  messages.rs  mod.rs
