[package]
name = "message-service"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.5.1"
deadpool-postgres = "0.13.2"
dotenv = "0.15.0"
serde = { version = "1.0.202", features = ["derive"] }
sqlite = "0.36.0"
